# upa-do-tenis-app

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: TEMPLATE_ENTIDADE.md  cheat_sheet_tauri_rust_sqlite.md  documentacao_projeto_upa_do_tenis_sapataria_alvez.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260101000000_create_pacientes.sql  20260102000000_create_usuarios.sql  20260103000000_drop_pacientes.sql
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs
src/components/Layout/Header/: index.tsx  styles.module.css
src/components/Layout/MainLayout/: index.tsx  styles.module.css
src/components/Layout/Sidebar/: index.tsx  styles.module.css
src/components/Layout/WindowControls/: index.tsx  styles.module.css
src/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx
src/config/: indicadores.ts  menu.ts
src/features/dashboard/components/: DashboardPage.tsx
src/features/usuarios/: types.ts  validation.ts
src/features/usuarios/components/: UsuarioForm.tsx  UsuariosLista.tsx  UsuariosPage.tsx
src/features/usuarios/hooks/: useUsuarios.ts
src/pages/Dashboard/: index.tsx  styles.module.css
src/pages/Usuarios/: UsuariosPage.tsx  index.ts  styles.module.css
src/routes/: index.tsx
src/services/: usuarios.ts
src/styles/: global.css
